<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017 Adrian Videnie
  ~
  ~ This file is part of Expenses.
  ~
  ~ Expenses is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Expenses is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Expenses. If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">Expenses</string>

    <!-- Activity titles -->
    <string name="title_activity_overview">Overview</string>
    <string name="title_activity_accounts">Accounts</string>
    <string name="title_activity_transactions">Transactions</string>
    <string name="title_activity_backup">Backup/Restore</string>
    <string name="title_activity_financisto_import">Import from Financisto</string>
    <string name="title_activity_categories">Categories</string>
    <string name="title_activity_payees">Payees</string>
    <string name="title_activity_exchange_rates">Exchange Rates</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Generic messages -->
    <string name="success">Success</string>

    <!-- Navigation drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_manage">Manage</string>

    <!-- Genearic buttons -->
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_import">Import</string>

    <!-- Account types -->
    <string name="account_type_cash">Cash</string>
    <string name="account_type_debit_card">Debit Card</string>
    <string name="account_type_credit_card">Credit Card</string>
    <string name="account_type_bank">Bank Account</string>
    <string name="account_type_savings">Savings Account</string>
    <string name="account_type_loan">Loan</string>
    <string name="account_type_online">Online Account</string>
    <string name="account_type_other">Other</string>

    <!-- Card issuers -->
    <string name="card_issuer_american_express">American Express (Amex)</string>
    <string name="card_issuer_visa">Visa</string>
    <string name="card_issuer_visa_electron">Visa Electron</string>
    <string name="card_issuer_mastercard">MasterCard</string>
    <string name="card_issuer_maestro">Maestro</string>
    <string name="card_issuer_discover">Discover</string>
    <string name="card_issuer_cirrus">Cirrus</string>
    <string name="card_issuer_jcb">JCB</string>
    <string name="card_issuer_unionpay">UnionPay</string>
    <string name="card_issuer_eps">EPS</string>
    <string name="card_issuer_diners">Diners Club</string>
    <string name="card_issuer_other">Other</string>

    <!-- Online accounts -->
    <string name="online_account_paypal">Paypal</string>
    <string name="online_account_amazon">Amazon</string>
    <string name="online_account_google_wallet">Google Wallet</string>
    <string name="online_account_other">Other</string>

    <!-- Backup/restore and import from Financisto -->
    <string name="read_storage_rationale_title">Access denied</string>
    <string name="read_storage_rationale"><![CDATA[You haven\'t allowed <b>%1$s</b> to access your files. Without access, <b>%2$s</b> cannot list backup files or create new backups.]]></string>
    <string name="read_storage_rationale_financisto_import"><![CDATA[You haven\'t allowed <b>%1$s</b> to access your files. Without access, <b>%2$s</b> cannot list Financisto backup files that can be imported.]]></string>
    <string name="allow_access">Allow access</string>
    <string name="financisto_import_confirmation_title">Import Financisto backup file?</string>
    <string name="financisto_import_confirmation_message">Your existing database will be removed and replaced with the contents of the Financisto backup file.</string>
    <string name="financisto_import_progress">Importing Financisto backup…</string>
    <string name="financisto_import_successful">The Financisto backup has been successfully imported.</string>
    <string name="no_financisto_backup_found">Could not find any Financisto backups. Open Financisto, back up your database and try again.</string>
    <string name="action_financisto_import">Import from Financisto</string>

    <!-- Transactions -->
    <string name="action_edit_transaction">Edit transaction</string>
    <string name="action_delete_transaction">Delete transaction</string>
    <string name="no_transactions_found">No transactions found.</string>
    <string name="all_accounts">All accounts</string>
    <string name="breadcrumbs">%1$s » %2$s</string>
    <string name="multiple_categories">[Multiple categories …]</string>
    <string name="default_transfer_description">Transfer</string>
    <string name="default_debit_description">Debit</string>
    <string name="default_credit_description">Credit</string>
    <plurals name="selected_transactions">
        <item quantity="one">1 selected</item>
        <item quantity="other">%d selected</item>
    </plurals>

    <!-- Single selection CAB -->
    <string name="selected_single_selection">1 selected</string>

    <!-- Manage accounts -->
    <string name="no_account_defined">You haven\'t created an account yet.</string>
    <string name="action_edit_account">Edit Account</string>
    <string name="action_close_account">Close Account</string>
    <plurals name="selected_accounts">
        <item quantity="one">1 selected</item>
        <item quantity="other">%d selected</item>
    </plurals>

    <!-- Manage payees -->
    <string name="no_payees_found">No payees found</string>
    <string name="action_edit_payee">Edit Payee</string>
    <string name="action_delete_payee">Close Payee</string>
    <plurals name="selected_payees">
        <item quantity="one">1 selected</item>
        <item quantity="other">%d selected</item>
    </plurals>

</resources>
